samples/_failures_safe/1761661218_14ae2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_957916f0.c: In function ‘main’:
./samples/SAFE/__tmp_957916f0.c:166:15: error: expected ‘;’ at end of input
  166 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_957916f0.c:166:9: error: expected declaration or statement at end of input
  166 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_957916f0.c:166:9: error: expected declaration or statement at end of input
